--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
+  "description": "Personal website-portfolio of Kate Shaitarova",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
